--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 
 # Godot-specific ignores
-.import/
+.game/import/
 export.cfg
 export_presets.cfg
 
 # Mono-specific ignores
-.mono/
+.game/mono/
 data_*/
